Support pagy 9.0 with new table_pagination_with helper
Pagy 9 moves `anchor-string` parameter to pagy_nav. We don't want
users to have to customise this themselves, so adding a helper to
make this easier.

--- a/spec/dummy/app/views/resources/index.html.erb
+++ b/spec/dummy/app/views/resources/index.html.erb
@@ -13,4 +13,4 @@
 <%# generating ids for rows is not required for selection, but it makes testing easier %>
 <%= table_with(collection:, generate_ids: true) %>
 
-<%== pagy_nav(collection.pagination) %>
+<%= table_pagination_with(collection:) %>
