--- a/spec/dummy/app/views/people/archived.html.erb
+++ b/spec/dummy/app/views/people/archived.html.erb
@@ -17,4 +17,4 @@
   <% row.currency :id, label: "Currency" %>
 <% end %>
 
-<%== pagy_nav(collection.pagination) %>
+<%= table_pagination_with(collection:) %>
