--- a/spec/dummy/app/views/people/index.html.erb
+++ b/spec/dummy/app/views/people/index.html.erb
@@ -28,4 +28,4 @@
   <% row.currency :id, label: "Currency" %>
 <% end %>
 
-<%== pagy_nav(collection.pagination) %>
+<%= table_pagination_with(collection:) %>
