--- a/app/assets/stylesheets/katalyst/tables/_query.scss
+++ b/app/assets/stylesheets/katalyst/tables/_query.scss
@@ -96,10 +96,12 @@
     }
   }
 
-  .footer {
+  footer {
     grid-area: footer;
     display: flex;
-    justify-content: flex-end;
-    padding-block: 1rem;
+    justify-content: flex-start;
+    padding-inline: 1rem;
+    padding-block: 0.5rem;
+    border-top: 1px solid #d3d3d3;
   }
 }
