--- a/app/assets/stylesheets/katalyst/tables/_query.scss
+++ b/app/assets/stylesheets/katalyst/tables/_query.scss
@@ -54,7 +54,6 @@
   box-shadow:
     0 3px 6px rgba(0, 0, 0, 0.16),
     0 3px 6px rgba(0, 0, 0, 0.23);
-  margin-top: 0.5rem;
   background: white;
   border-radius: 4px;
   z-index: 1;
@@ -77,7 +76,7 @@
   .content {
     grid-area: content;
     padding-inline: 1rem;
-    padding-block: 0.5rem 0;
+    padding-block: 0.5rem;
   }
 
   ul {
@@ -103,5 +102,6 @@
     padding-inline: 1rem;
     padding-block: 0.5rem;
     border-top: 1px solid #d3d3d3;
+    font-size: small;
   }
 }
