Query form customisation repair
Previous approach didn't work with anything more than a single input.
Test was not testing the right thing as it rendered via the view
component instead of via the template.

Note, this requires the view_component capture compatibility patch:

```
config.view_component.capture_compatibility_patch_enabled = true
```

--- a/app/assets/stylesheets/katalyst/tables/_query.scss
+++ b/app/assets/stylesheets/katalyst/tables/_query.scss
@@ -2,6 +2,7 @@
   position: relative;
 
   .query-input {
+    position: relative;
     display: grid;
     grid-template-areas: "input button";
     grid-template-columns: 1fr auto;
