Click / tab to add or replace values

--- a/app/components/katalyst/tables/query/modal_component.html.erb
+++ b/app/components/katalyst/tables/query/modal_component.html.erb
@@ -9,7 +9,7 @@
   <div class="content">
     <% if suggestions? %>
       <h4><%= t(".suggestions_title") %></h4>
-      <ul>
+      <ul id="suggestions">
         <% suggestions.each do |suggestion| %>
           <%= render suggestion %>
         <% end %>
