--- a/app/assets/stylesheets/katalyst/tables/table.css
+++ b/app/assets/stylesheets/katalyst/tables/table.css
@@ -1,5 +1,7 @@
 .katalyst--table {
   --cell-spacing: 0.5rem;
+  --cell-text-align: left;
+  --cell-vertical-align: top;
   --table-header-color: transparent;
   --row-border-color: #f0ecf3;
   --tag-color: #f0ecf3;
@@ -12,7 +14,6 @@
 
   border: none;
   border-collapse: collapse;
-  text-align: left;
   width: 100%;
 
   thead {
@@ -24,8 +25,9 @@
     border: none;
     box-shadow: inset 0 -1px 0 var(--row-border-color);
     overflow: hidden;
+    text-align: var(--cell-text-align, left);
     text-overflow: ellipsis;
-    vertical-align: top;
+    vertical-align: var(--cell-vertical-align, top);
     white-space: nowrap;
     background-color: white;
     padding-right: var(--cell-spacing);
@@ -56,19 +58,11 @@
 
   th {
     font-weight: bold;
-    min-width: var(--cell-width);
+  }
 
-    :where(&.width-s) {
-      --cell-width: var(--width-small);
-    }
-
-    :where(&.width-m) {
-      --cell-width: var(--width-medium);
-    }
-
-    :where(&.width-l) {
-      --cell-width: var(--width-large);
-    }
+  /* override text align in row headers to ensure the line up with other headers */
+  tbody th {
+    text-align: left;
   }
 
   thead a.ascending:after,
@@ -104,41 +98,33 @@
 
   /* Booleans */
 
-  :where(th.type-boolean, td.type-boolean) {
+  :where([data-cell-type="boolean"]) {
     --cell-width: var(--width-small);
   }
 
   /* Currency */
 
-  :where(th.type-currency, td.type-currency) {
+  :where([data-cell-type="currency"]) {
     --cell-width: var(--width-small);
-  }
-
-  :where(thead th.type-currency, td.type-currency) {
-    text-align: right;
+    --cell-text-align: right;
   }
 
   /* Dates */
 
-  :where(th.type-date, td.type-date) {
+  :where([data-cell-type="date"]) {
     --cell-width: var(--width-small);
+  }
+
+  :where([data-cell-type="datetime"]) {
+    --cell-width: var(--width-medium);
   }
 
   /* Enums */
 
-  :where(th.type-datetime, td.type-datetime) {
-    --cell-width: var(--width-medium);
-  }
-
-  :where(th.type-enum, td.type-enum) {
+  :where([data-cell-type="enum"]) {
     --cell-width: var(--width-small);
-  }
 
-  :where(td.type-enum) {
-    /* ensure ellipsis is the correct color */
-    color: var(--on-tag-color);
-
-    small {
+    [data-enum] {
       background: var(--tag-color);
       border-radius: 0.25rem;
       padding: 0.25rem;
@@ -146,19 +132,15 @@
     }
   }
 
-  td.type-enum {
-    text-overflow: unset;
-  }
-
   /* Ordinals */
 
-  tr:has(td.ordinal) {
+  tr:has(td[data-cell-type="ordinal"]) {
     transition:
       top 125ms ease-in-out,
       transform 125ms ease-in-out;
   }
 
-  tr:has(td.ordinal)[dragging] {
+  tr:has(td[data-cell-type="ordinal"])[dragging] {
     transition: transform 125ms ease-in-out;
     filter: drop-shadow(0 0 0.5rem var(--row-border-color));
     transform: scale(1.01);
@@ -168,7 +150,7 @@
     }
   }
 
-  th.ordinal {
+  th[data-cell-type="ordinal"] {
     width: 2rem;
     padding-left: 0;
 
@@ -182,7 +164,7 @@
     }
   }
 
-  td.ordinal {
+  td[data-cell-type="ordinal"] {
     width: 2rem;
     padding-left: 0;
     cursor: grab;
@@ -191,17 +173,14 @@
 
   /* Numbers */
 
-  :where(th.type-number, td.type-number) {
+  :where([data-cell-type="number"]) {
     --cell-width: var(--width-small);
-  }
-
-  :where(thead th.type-number, td.type-number) {
-    text-align: right;
+    --cell-text-align: right;
   }
 
   /* Select */
 
-  :where(th.selection, td.selection) {
+  :where([data-cell-type="selection"]) {
     --cell-width: 2rem;
 
     label {
