--- a/app/components/katalyst/tables/query/input_component.html.erb
+++ b/app/components/katalyst/tables/query/input_component.html.erb
@@ -15,5 +15,5 @@
       ) %>
   <div aria-hidden="true" class="highlight" data-tables--query-input-target="highlight"><%= form.object.query %></div>
   <%= form.hidden_field(:p) %>
-  <%= form.button("Apply", type: :submit, name: nil, tabindex: -1) %>
+  <%= form.button("Apply", type: :submit, name: nil, tabindex: -1, class: "button") %>
 <% end %>
