--- a/app/components/katalyst/tables/query/modal_component.html.erb
+++ b/app/components/katalyst/tables/query/modal_component.html.erb
@@ -9,7 +9,7 @@
   <div class="content">
     <% if suggestions? %>
       <h4 id="suggestions-title"><%= t(".suggestions_title") %></h4>
-      <ul id="suggestions" role="listbox" aria-labelledby="suggestions-title">
+      <ul id="suggestions" class="suggestions" role="listbox" aria-labelledby="suggestions-title">
         <% suggestions.each do |suggestion| %>
           <%= render suggestion %>
         <% end %>
